--- a/SisEva-SPA/src/app/nav-bar/nav-bar.component.html
+++ b/SisEva-SPA/src/app/nav-bar/nav-bar.component.html
@@ -1,23 +1,22 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Fixed navbar</a>
+  <a class="navbar-brand" href="#">Sistema de evaluacion</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+    <ul class="navbar-nav mr-auto" *ngIf="loggedIn()">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Nueva encuesta</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Link</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
+        <a class="nav-link" href="#">Reportes</a>
       </li>
     </ul>
-    <form class="form-inline mt-2 mt-md-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <li *ngIf="!loggedIn()">
+      <button type="button" class="btn btn-success" [routerLink]="[ 'login']">Iniciar sesion</button>
+    </li>
+    <li *ngIf="loggedIn()">
+      <button type="button" class="btn btn-success" (click)="cerrarSesion()">Cerrar sesion</button>
+    </li>
   </div>
 </nav>
