--- a/SisEva-SPA/src/app/login/login.component.html
+++ b/SisEva-SPA/src/app/login/login.component.html
@@ -18,6 +18,7 @@
     </div>
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">Inicia sesion</button>
+    <button class="btn btn-lg btn-warning btn-block" [routerLink]="['']">Volver</button>
   </form>
 
 
