--- a/SisEva-SPA/src/app/nav-bar/nav-bar.component.html
+++ b/SisEva-SPA/src/app/nav-bar/nav-bar.component.html
@@ -1,15 +1,15 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-  <a class="navbar-brand" href="#">Sistema de evaluacion</a>
+  <a class="navbar-brand" [routerLink]="[ '']">Sistema de evaluacion</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto" *ngIf="loggedIn()">
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="[ '/encuesta']">Nueva encuesta</a>
+        <a class="nav-link" [routerLink]="[ 'encuesta']">Nueva encuesta</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Reportes</a>
+        <a class="nav-link" [routerLink]="[ 'reportes']">Reportes</a>
       </li>
     </ul>
     <li *ngIf="!loggedIn()">
