--- a/SisEva-SPA/src/app/registrar/registrar.component.html
+++ b/SisEva-SPA/src/app/registrar/registrar.component.html
@@ -28,7 +28,7 @@
         <input type="password" name="Password" class="form-control" placeholder="Password" required [(ngModel)]="model.password">
       </div>
 
-      <button class="btn btn-lg btn-success btn-block" type="submit">Registrar</button>
+      <button class="btn btn-lg btn-success btn-block" type="submit" [disabled]="!registarForm.valid">Registrar</button>
       <button class="btn btn-lg btn-warning btn-block" [routerLink]="['']">Volver</button>
     </form>
 
